--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>Team_Number_List.txt</file>
+        <file>icon.png</file>
     </qresource>
 </RCC>
